# project-team-21

./: .gitignore  CMakeLists.txt  LICENSE  README.md  task-allocation.md
3150-as4/: sketch  sketch.cpp
gui/: README.md
gui/Query_GUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
gui/database_gui/: CMakeLists.txt  mainwindow.ui
report/: 3170proj_2.pptx
simple_db/: .gitignore  CMakeLists.txt  Col.h  CommandInterpreter.cpp  CommandInterpreter.h  Conditions.cpp  Conditions.h  DBResults.cpp  DBResults.h  Database.cpp  Database.h  Makefile  README.md  Row.cpp  Row.h  SchemaItem.cpp  SchemaItem.h  Table.cpp  Table.h  main.cpp
simple_db/include/: CommandInterpreter.h  Conditions.h  Database.h  Row.h  SchemaItem.h  Table.h
simple_db/src/: CommandInterpreter.cpp  Conditions.cpp  Database.cpp  Row.cpp  SchemaItem.cpp  Table.cpp  main.cpp
testing/: README.md  create_table.sql  delete_row.sql  delete_table.sql  demo_script.sql  insert_into.sql  load_table.sql  print_table.sql  select_table.sql  store_table.sql
testing/database/: db_enrolled.db  db_enrolled1.db  db_schedule.db  db_students1.db
testing/unit_test/: CMakeLists.txt  Database_test.h  README.md  Row_test.h  Schemaitem_test.h  Table_test.h  main.cpp  test.cpp  test.h
testing_/: CMakeLists.txt  README.md  test.cpp
unit_test/: CMakeLists.txt  test.cpp  test.h
